# Dreadnought

./: CMakeLists.txt  LICENSE  README.md
include/dreadnought/core/: compiler.hpp  dreadnought.hpp  types.hpp
include/dreadnought/logger/: binary_logger.hpp  spscqueue.hpp
include/dreadnought/market_data/: market_state.hpp  order_book.hpp
include/dreadnought/network/: nic_poller.hpp  packet.hpp  ring_buffer.hpp
include/dreadnought/risk/: risk_models.hpp
include/dreadnought/strategy/: mean_reversion.hpp
include/dreadnought/threading/: affinity.hpp
include/dreadnought/timing/: latency_tracker.hpp  rdtsc.hpp
src/: main.cpp
src/logger/: binary_logger.cpp
src/network/: nic_poller.cpp
src/threading/: affinity.cpp
strategies/: mean_reversion.cpp
